force-app/main/default/objects/SPEN_Land__c/fields/SPEN_Address__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Address__c</fullName>
    <label>Grantor Name and Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>