force-app/main/default/objects/SPEN_Land__c/fields/SPEN_GIS_URL__c.field-meta.xml
<CustomField>
    <fullName>SPEN_GIS_URL__c</fullName>
    <label>GIS URL</label>
    <type>Url</type>
</CustomField>