force-app/main/default/objects/SPEN_Land__c/fields/SPEN_OSGridReferenceParcel__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OSGridReferenceParcel__c</fullName>
    <label>OS Grid Reference of Parcel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>