force-app/main/default/objects/SPEN_Land__c/fields/SPEN_ParentLand__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ParentLand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Land</label>
    <referenceTo>SPEN_Land__c</referenceTo>
    <relationshipLabel>Land</relationshipLabel>
    <relationshipName>Lands</relationshipName>
    <type>Lookup</type>
</CustomField>