force-app/main/default/objects/SPEN_Land__c/fields/SPEN_Postcode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Postcode__c</fullName>
    <description>ESC-118 Postcode requirement</description>
    <label>Postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>