force-app/main/default/objects/SPEN_Land__c/fields/SPEN_Title__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Title__c</fullName>
    <inlineHelpText>Land Registry or Land Scotland Legal Title Number</inlineHelpText>
    <label>Land Legal Title Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>