force-app/main/default/objects/SPEN_Land__c/validationRules/SPEN_OSGridRefParcelFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_OSGridRefParcelFormat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( SPEN_OSGridReferenceParcel__c )),
NOT(REGEX( SPEN_OSGridReferenceParcel__c  ,&quot;[0-9]{6},[0-9]{6}&quot;))
)</errorConditionFormula>
    <errorDisplayField>SPEN_OSGridReferenceParcel__c</errorDisplayField>
    <errorMessage>Ensure Format of OS Grid Reference of Parcel is &apos;NNNNNN,NNNNNN&apos;</errorMessage>
</ValidationRule>